# libgeometry

./: CMakeLists.txt
src/: CMakeLists.txt  cap_type.h  circle.cpp  circle.h  circle_2.cpp  circle_2.h  clip_options.cpp  clip_options.h  clip_type.h  clipper_utilities.cpp  clipper_utilities.h  closed_curve_2.cpp  closed_curve_2.h  closed_curve_3.cpp  closed_curve_3.h  curve.cpp  curve.h  curve_2.cpp  curve_2.h  curve_3.cpp  curve_3.h  edge.cpp  edge.h  face.cpp  face.h  geometry.h  join_type.h  mesh.cpp  mesh.h  mesh_2.cpp  mesh_2.h  offset_options.cpp  offset_options.h  open_curve_2.cpp  open_curve_2.h  open_curve_3.cpp  open_curve_3.h  point_2.cpp  point_2.h  point_3.cpp  (+37 more)
